# r5-server-bot

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  README_en.md  pack.sh  pyproject.toml  ruff.toml  uv.toml
.github/: copilot-instructions.md
docs/: frontend-api.md  partition-migration-player-killed.md
env/: .env.example
patch/: collapse-daily-stats-opponent-dimension-sql.md  input-device-stats-migration-sql.md  player-match-weapon-opponent-migration-sql.md
scripts/: resync_ip_info.py
services/fastapi_service/: pyproject.toml
services/fastapi_service/data/: launcher_config.toml  launcher_update.toml
services/fastapi_service/src/fastapi_service/: ingest_main.py  ingest_server.py  main.py  server.py
services/fastapi_service/src/fastapi_service/api/: __init__.py  deps.py
services/fastapi_service/src/fastapi_service/api/v1/: __init__.py  access.py  admin.py  admin_management.py  apex.py  donations.py  game_configs.py  ingest.py  launcher.py  leaderboard.py  matches.py  player_stats.py  players.py  pylon.py  router.py  server.py  teams.py  user.py
services/fastapi_service/src/fastapi_service/api/v1/r5/: __init__.py  api.py  auth.py  cache.py  donation.py  models.py  netcon_client.py  rcon.py  tasks.py  utils.py
services/fastapi_service/src/fastapi_service/api/v1/r5/endpoints/: admin.py  launcher.py  leaderboard.py  players.py  server.py
services/fastapi_service/src/fastapi_service/core/: auth.py  cache.py  constants.py  errors.py  response.py  utils.py
services/fastapi_service/src/fastapi_service/scripts/: rebuild_sdk_match_weapon_stats.py
services/fastapi_service/src/fastapi_service/services/: admin_management_service.py  admin_service.py  apex_service.py  apex_translations.py  binding_role_service.py  binding_service.py  donation_service.py  game_config_service.py  ingest_service.py  jwt_auth_service.py  launcher_service.py  leaderboard_service.py  match_service.py  milky_service.py  player_access_service.py  player_service.py  pylon_db_service.py  pylon_service.py  rcon.py  server_resolver.py  server_service.py  steam_auth_service.py  team_service.py
services/fastapi_service/src/fastapi_service/tasks/: close_stale_matches.py  fetch_apex.py  fetch_launcher_version.py  fetch_servers.py  reconcile_matches.py  refresh_player_kill_daily_stats.py  resolve_ips.py  scheduler.py  sync_game_version.py  sync_legacy_access.py  sync_milky_admins.py  sync_players.py
services/nonebot_service/: .env.example  pyproject.toml
services/nonebot_service/src/plugins/r5/: __init__.py  api_client.py  config.py
services/nonebot_service/src/plugins/r5/services/: admin.py  admin_group.py  apex.py  binding.py  common.py  donation.py  friend.py  help.py  kd.py  match.py  query.py  server_arg.py  status.py  team.py  weapons.py
services/ws_service/: pyproject.toml
services/ws_service/src/ws_service/: dashboard.py  display.py  ingest_client.py  listener.py  main.py
tests/: test_access_reason_period.py  test_admin_bans_search.py  test_apex_service.py  test_binding_admin_grant.py  test_fetch_servers.py  test_game_config_presets.py  test_game_version_sync.py  test_ip_resolver.py  test_leaderboard_kd_input_device.py  test_milky_admin_sync.py  test_player_access_reason_locale.py  test_sdk_match_report_ingest.py
tools/: region_lock_text_cases copy.json  region_lock_text_cases.json  region_lock_text_tester.py
