[project]
name = "my-project-root"
version = "0.1.0"
description = "Monorepo root for WS and API services"
requires-python = ">=3.12"
dependencies = [
    "aerich>=0.7.2",
    "fastapi-service",
    "shared-lib",
    "ws-service",
]

[tool.uv.workspace]
members = [
    "packages/shared_lib",
    "services/ws_service",
    "services/fastapi_service"
]
exclude = [
    "services/nonebot_service"
]

[tool.uv.sources]
fastapi-service = { workspace = true }
shared-lib = { workspace = true }
ws-service = { workspace = true }

[tool.aerich]
tortoise_orm = "shared_lib.database.TORTOISE_ORM"
location = "./packages/shared_lib/migrations"
src_folder = "./packages/shared_lib/src"

[tool.basedpyright]
typeCheckingMode = "standard"
exclude = [
    "**/__pycache__",
    "**/.venv",
    "services/nonebot_service",
]
reportMissingTypeStubs = false
reportMissingTypeArgument = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportUnusedCallResult = false
reportAny = false

[dependency-groups]
dev = [
    "basedpyright>=1.39.0",
]
