[project]
name = "fastapi-service"
version = "0.1.0"
description = "Main Data API Service"
requires-python = ">=3.12"
dependencies = [
    "shared-lib",
    "fastapi",
    "uvicorn",
    "httpx>=0.27.0",
    "loguru>=0.7.3",
    "pycryptodomex>=3.23.0",
    "tortoise-orm[asyncpg]>=0.25.3",
    "schedule>=1.2.2",
]

[tool.uv.sources]
shared-lib = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
